<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">鼎圣汇</string>
    <string name="wangjimima">忘记密码</string>
    <string name="jizhumima">记住密码</string>
    <string name="denglu">登录</string>
    <string name="zhuce">注册</string>
    <string name="qingshuruyonghuming">请输入用户名</string>
    <string name="qingshuruyonghumingcheng">请输入用户名称</string>
    <string name="qingshurumima">请输入密码</string>
    <string name="qingshuruwuweimima">请输入5位以上密码</string>
    <string name="qingshurushiyiweishoujihaoma">请输入11位手机号码</string>
    <string name="qingshuruliuweiyanzhengma">请输入6位验证码</string>
    <string name="qingshuruzhengquegeshideyouxiangdizhi">请输入正确格式的邮箱地址</string>
    <string name="qingshurudianhuahaoma">请输入电话号码</string>
    <string name="qingshurushenfenzhenghaoma">请输入身份证号码</string>
    <string name="qingshurudizhi">请输入预留地址</string>
    <string name="notmatchpassword">两次输入的密码不一致.</string>
    <string name="notexistphone">此手机号码不存在</string>
    <string name="verifyexpire">此验证码有效时间已经过了</string>
    <string name="notexistcardinfo">此卡信息不存在</string>
    <string name="verifyover">当天SMS邀请次数是最高3次</string>
    <string name="paramerror">参数错误</string>
    <string name="caozuochenggong">操作成功</string>
    <string name="notexistuser">此用户不存在</string>
    <string name="existeduser">此用户已存在</string>
    <string name="existedphone">此手机号码已存在</string>
    <string name="fuwuqineibucuowu">服务器内部错误</string>
    <string name="dingdanshengchengchenggong">订单生成成功</string>
    <string name="ninshurudeyanzhengmabudui">您输入的验证码不对</string>
    <string name="exitapp">再按一次退出程序</string>
    <string name="qingshurudingshenghuizhanghao">请输入鼎圣汇账号（手机号）</string>
    <string name="xiayibu">下一步</string>
    <string name="qingshaodeng">请稍等。。。</string>
    <string name="yanzhengmaduanxin">验证码短信会发到您的手机</string>
    <string name="huoquyanzhengma">获取验证码</string>
    <string name="qingshuruyanzhengma">请输入验证码</string>
    <string name="chongzhimima">重置密码</string>
    <string name="qingshuruxinmima">请输入新密码</string>
    <string name="querenmima">确认密码</string>
    <string name="wancheng">完成</string>
    <string name="qingshurunindeshoujihaoma">请输入您的手机号码</string>
    <string name="huoqu">获取</string>
    <string name="nindezhanghu">您的账户</string>
    <string name="dianjidenglu">点击登录</string>
    <string name="dingshenghui">鼎圣汇</string>
    <string name="jingcaituangou">精彩团购</string>
    <string name="wangshangchecheng">网上车城</string>
    <string name="jinrongchaoshi">金融超市</string>
    <string name="huiyuanfuwu">会员服务</string>
    <string name="tehuishanghu">特惠商户</string>
    <string name="yinhangkashouli">银行卡受理</string>
    <string name="xinyongkabanli">信用卡办理</string>
    <string name="baoxianyewu">保险业务</string>
    <string name="licaichanpin">理财产品</string>
    <string name="xiaoedaikuan">小额贷款</string>
    <string name="huiyuanzhongxin">会员中心</string>
    <string name="yonghuming">用户名</string>
    <string name="yonghuxingming">用户姓名</string>
    <string name="yonghushengri">用户生日</string>
    <string name="chushengriqi">出生日期</string>
    <string name="youxiangdizhi">邮箱地址</string>
    <string name="wodedingdan">我的订单</string>
    <string name="wodeshoujihao">我的手机号</string>
    <string name="bi">笔</string>
    <string name="dejifen">的积分</string>
    <string name="shangchuanzhaopian">上传照片</string>
    <string name="queren">确认</string>
    <string name="chanpinxiangqing">产品详情</string>
    <string name="lijiqianggou">立即抢购</string>
    <string name="shangjidizhi">商家地址</string>
    <string name="shangjidianhua">商家电话</string>
    <string name="goumaixuzhi">购买须知</string>
    <string name="dingdantijiao">订单提交</string>
    <string name="shuliang">数量 ：</string>
    <string name="dinghuaqian">使用积分顶钱花</string>
    <string name="shiyongjifen">使用积分</string>
    <string name="shiyongjifen1">使用积分 ：</string>
    <string name="zongjia">总价 ：</string>
    <string name="bangdingshoujihaoma">绑定您的手机号码</string>
    <string name="bangdingxinhaoma">绑定新号码</string>
    <string name="suishituikuan">随时退款</string>
    <string name="tijiaodingdan">提交订单</string>
    <string name="querenzhifu">确认支付</string>
    <string name="xuanzezhifufangshi">选择支付方式</string>
    <string name="yinlianzhifu">银联支付</string>
    <string name="dingdanchenggong">订单成功</string>
    <string name="gongxinin">恭喜您 ：订单成功</string>
    <string name="dingdanhao">订单号 ：</string>
    <string name="woyaobanka">我要办卡</string>
    <string name="woyitongyitiaokuan">我已同意条款</string>
    <string name="chikarenxingming">持卡人姓名</string>
    <string name="yuliudianhua">预留电话</string>
    <string name="shenfenzhenghaoma">身份证号码</string>
    <string name="yuliudizhi">预留地址</string>
    <string name="qingshuruliuyanxinxi">请输入留言信息</string>
    <string name="gongxininshenqingchenggong">恭喜您申请成功</string>
    <string name="shenqingchenggong">申请成功</string>
    <string name="gerendaikuan">个人贷款</string>
    <string name="qiyedaikuan">企业贷款</string>
    <string name="jiekuanqiyequancheng">借款企业全称</string>
    <string name="qiyefarenmingcheng">企业法人名称</string>
    <string name="farenshenfenzhenghao">法人身份证号</string>
    <string name="farenlianxifangshi">法人联系方式</string>
    <string name="lianxiren">联系人</string>
    <string name="lianxifangshi">联系方式</string>
    <string name="lianxidizhi">联系地址</string>
    <string name="quxiao">取消</string>
    <string name="yuanmima">原密码</string>
    <string name="xinmima">新密码</string>
    <string name="querenxiugai">确认修改</string>
    <string name="xiugaimima">修改密码</string>
    <string name="yifukuan">已付款</string>
    <string name="deifukuan">待付款</string>
    <string name="tuihuo">退货</string>
    <string name="yipingjia">已评价</string>
    <string name="pingjia">评价</string>
    <string name="haoping">好评</string>
    <string name="chaping">差评</string>
    <string name="nian">年</string>
    <string name="yue">月</string>
    <string name="ri">日</string>
    <string name="shi">时</string>
    <string name="fen">分</string>
    <string name="shezhi">设置</string>
    <string name="yishou">已售</string>
    <string name="yuan">元</string>
    <string name="sousuo">搜索</string>
    <string name="qingshurujiekuanqiyemingcheng">请输入借款企业名称</string>
    <string name="qingshuruqiyefarenmingcheng">请输入企业法人名称</string>
    <string name="qingshurufarenshenfenzhenghao">请输入法人身份证号</string>
    <string name="qingshurufarenlianxifangshi">请输入法人联系方式</string>
    <string name="qingshurulianxiren">请输入联系人</string>
    <string name="qingshurulianxifangshi">请输入联系方式</string>
    <string name="qingshurulianxidizhi">请输入联系地址</string>
    <string name="wangtongxuncuowu">网通讯错误</string>
    <string name="qupingjia">待评价</string>
    <string name="deipingjia">待评价</string>
    <string name="qufukuan">待付款</string>
    <string name="wuxian">无限</string>
    <string name="bunengliyong">不能利用</string>
    <string name="photoselect_paizhao">拍照</string>
    <string name="photoselect_congshouji">从手机相册中选</string>
    <string name="photoselect_cancel">取消</string>
    <string name="STR_CANNOT_TAKEPHOTO">抱歉，您的手机不会保存照片!</string>
    <string name="STR_LOADING_IMAGE_FAILED">读取照片失败</string>
    <string name="STR_TAKING_PHOTO_FAILED">拍照失败</string>
    <string name="STR_TAKE_PHOTO_TITLE">选择图片</string>
    <string name="STR_TAKE_PHOTO">拍照</string>
    <string name="STR_SELECT_IMAGE">相册</string>
    <string name="confirmdelete">您确定要退货吗?</string>

</resources>
