<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" android:id="@+id/parent_layout" android:background="@color/grayrare">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="100px" android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" android:background="@color/bluelight"
            android:id="@+id/relativeLayout">
        <ImageView
                android:layout_width="50px"
                android:layout_height="80px"
                android:id="@+id/imgBack" android:layout_centerVertical="true" android:layout_alignParentLeft="true"
                android:layout_marginLeft="30px" android:scaleType="fitCenter" android:src="@drawable/leftarrowicon"/>
        <TextView
                android:layout_width="400px"
                android:layout_height="fill_parent"
                android:text="@string/denglu"
                android:id="@+id/lblTitle" android:layout_centerVertical="true" android:layout_centerHorizontal="true"
                android:gravity="center" android:textColor="@color/white" android:textSize="50px"/>
    </RelativeLayout>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="100px"
            android:ems="10"
            android:id="@+id/txtUserName" android:layout_centerVertical="true"
            android:background="@drawable/roundgraywhite" android:paddingRight="20px"
            android:textColor="@color/graylight" android:textSize="35px" android:singleLine="true"
            android:ellipsize="end" android:hint="@string/nindezhanghu" android:paddingLeft="20px"
            android:layout_marginTop="100px" android:layout_below="@+id/relativeLayout"
            android:layout_marginLeft="60px" android:layout_marginRight="60px"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="100px"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtPass" android:layout_below="@+id/txtUserName" android:layout_alignLeft="@+id/txtUserName"
            android:layout_marginTop="50px" android:layout_alignRight="@+id/txtUserName" android:ellipsize="end"
            android:paddingLeft="20px" android:paddingRight="20px" android:textColor="@color/graylight"
            android:textSize="35px" android:singleLine="true" android:gravity="center_vertical|left"
            android:background="@drawable/roundgraywhite" android:hint="@string/qingshurumima"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="100px"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtRePass" android:layout_below="@+id/txtPass"
            android:layout_marginTop="50px" android:layout_alignRight="@+id/txtPass"
            android:background="@drawable/roundgraywhite"
            android:ellipsize="end" android:gravity="center_vertical|left" android:paddingLeft="20px"
            android:paddingRight="20px" android:textColor="@color/graylight" android:textSize="35px"
            android:singleLine="true" android:layout_alignLeft="@+id/txtPass" android:hint="@string/querenmima"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="100px"
            android:text="@string/dianjidenglu"
            android:id="@+id/btnRegister"
            android:background="@drawable/roundblueblue" android:textColor="@color/white" android:textSize="35px"
            android:layout_alignLeft="@+id/txtRePass"
            android:layout_alignRight="@+id/txtRePass" android:layout_marginBottom="120px"
            android:layout_alignParentBottom="true"/>

</RelativeLayout>

