<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" android:id="@+id/parent_layout" android:background="@color/grayrare">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="100px" android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" android:background="@color/bluelight"
            android:id="@+id/relativeLayout">
        <ImageView
                android:layout_width="50px"
                android:layout_height="80px"
                android:id="@+id/imgBack" android:layout_centerVertical="true" android:layout_alignParentLeft="true"
                android:layout_marginLeft="30px" android:scaleType="fitCenter" android:src="@drawable/leftarrowicon"/>
        <TextView
                android:layout_width="400px"
                android:layout_height="fill_parent"
                android:text="@string/dingdanchenggong"
                android:id="@+id/lblTitle" android:layout_centerVertical="true" android:layout_centerHorizontal="true"
                android:gravity="center" android:textColor="@color/white" android:textSize="50px"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_below="@+id/relativeLayout"
            android:layout_alignParentLeft="true" android:background="@color/grayrare">
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="500px" android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true" android:layout_marginLeft="30px" android:layout_marginTop="50px"
                android:layout_marginRight="30px" android:background="@drawable/roundgraywhite">
            <TextView
                    android:layout_width="450px"
                    android:layout_height="100px"
                    android:text="@string/gongxinin"
                    android:id="@+id/lblSuccess" android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" android:layout_marginTop="120px" android:gravity="center"
                    android:textColor="@color/black" android:textSize="45px"/>
            <TextView
                    android:layout_width="500px"
                    android:layout_height="80px"
                    android:text="@string/dingdanhao"
                    android:id="@+id/lblOrderNo" android:layout_below="@+id/lblSuccess"
                    android:layout_centerHorizontal="true" android:layout_marginTop="80px" android:gravity="center"
                    android:textColor="@color/gray" android:textSize="35px"/>
        </RelativeLayout>
        <Button
                android:layout_width="500px"
                android:layout_height="100px"
                android:text="@string/queren"
                android:id="@+id/btnOk" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"
                android:layout_marginBottom="80px" android:background="@drawable/roundblueblue"
                android:textColor="@color/white" android:textSize="35px"/>
    </RelativeLayout>
</RelativeLayout>

