<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" android:id="@+id/parent_layout" android:background="@color/grayrare">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="100px" android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" android:background="@color/bluelight"
            android:id="@+id/relativeLayout">
        <ImageView
                android:layout_width="50px"
                android:layout_height="80px"
                android:id="@+id/imgBack" android:layout_centerVertical="true" android:layout_alignParentLeft="true"
                android:layout_marginLeft="30px" android:scaleType="fitCenter" android:src="@drawable/leftarrowicon"/>
        <TextView
                android:layout_width="400px"
                android:layout_height="fill_parent"
                android:text="@string/wodedingdan"
                android:id="@+id/lblTitle" android:layout_centerVertical="true" android:layout_centerHorizontal="true"
                android:gravity="center" android:textColor="@color/white" android:textSize="50px"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="100px" android:layout_below="@+id/relativeLayout"
            android:layout_alignParentLeft="true" android:layout_marginLeft="30px" android:layout_marginRight="30px"
            android:layout_marginTop="30px" android:background="@drawable/rectbluewhite"
            android:id="@+id/relativeLayout2">
        <TextView
                android:layout_width="220px"
                android:layout_height="fill_parent"
                android:text="@string/yifukuan"
                android:id="@+id/lblPayed" android:layout_centerVertical="true" android:layout_alignParentLeft="true"
                android:gravity="center" android:textColor="@color/white" android:textSize="35px"
                android:background="@drawable/rectblueblue"/>
        <TextView
                android:layout_width="220px"
                android:layout_height="fill_parent"
                android:text="@string/deifukuan"
                android:id="@+id/lblPay" android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/lblPayed" android:gravity="center" android:textColor="@color/bluelight"
                android:textSize="35px" android:background="@drawable/rectbluewhite"/>
        <TextView
                android:layout_width="220px"
                android:layout_height="fill_parent"
                android:text="@string/tuihuo"
                android:id="@+id/lblReject" android:layout_centerVertical="true" android:layout_toRightOf="@+id/lblPay"
                android:background="@drawable/rectbluewhite" android:gravity="center"
                android:textColor="@color/bluelight" android:textSize="35px"/>
    </RelativeLayout>
    <view android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          class="com.damytech.utils.PullRefreshListView.PullToRefreshListView" android:id="@+id/viewData"
          android:layout_below="@+id/relativeLayout2" android:layout_centerHorizontal="true"
          android:layout_marginTop="30px" android:background="@color/white"/>
</RelativeLayout>

